# kitty-test-harness

./: Cargo.toml  README.md  flake.nix
.github/workflows/: ci.yml
nix/: default.nix
src/: lib.rs
src/utils/: env.rs  keys.rs  log.rs  mod.rs  mouse.rs  patterns.rs  replay.rs  resize.rs  screen.rs  wait.rs  window.rs
tests/: basic_harness.rs  kitty_smoke.rs
