[package]
name = "kitty-test-harness"
version = "0.2.0"
edition = "2024"
description = "Integration test harness for driving kitty terminal via remote control and capturing screen output"
license = "MIT"
repository = "https://github.com/Alb-O/kitty-test-harness"
authors = ["Albert O'Shea"]
readme = "README.md"
keywords = ["kitty", "terminal", "testing", "harness", "integration"]
categories = ["development-tools::testing"]

[[bin]]
name = "kitty-runner"
path = "src/bin/kitty-runner.rs"

[dependencies]
ansi-escape-sequences = "0.1"
kitty-remote-bindings = "0.5"
termwiz = "0.23"

[dev-dependencies]
insta = "1.44"

[lints.rust]
missing_docs = "warn"
unused_crate_dependencies = "warn"

[workspace]
